[package]
name = "cdm-macros"
version = "0.1.0"
description = "Procedural macros re-exported in cdm-rt"
repository = "https://github.com/aelsi2/cdm-rs"
keywords = ["cdm", "cdm16", "runtime", "startup"]
categories = ["embedded", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.90"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
